--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,10 @@
 
 
 body{
-  background-image:url("assets/fondo.png");
-  /*height: 900px;
-  /*width: 100%;*/
-  background-repeat: no-repeat;
- /* background-position: center top;*/
+  padding: 0 auto;
+  margin: 0 auto;
+  background-color: #54a4a5;
   background-size: cover;
-  /*font-size: 80%;*/
 }
 
 
