--- a/src/app/secciones/foro/foro.component.html
+++ b/src/app/secciones/foro/foro.component.html
@@ -248,7 +248,7 @@
 
       
       <div *ngIf="validar" class="row d-flex justify-content-start mb-5 mt-5">
-        <a class= "btn btn-verde col-2 mx-5 btn-redo" [routerLink]="['/register']"><p>Ver Usuarios</p></a>
+        <a class= "btn btn-verde col-2 mx-5 btn-redo" [routerLink]="['/usuarios']"><p>Ver Usuarios</p></a>
     </div>
 
   </main>
