--- a/src/app/secciones/aplicacion/aplicacion.component.css
+++ b/src/app/secciones/aplicacion/aplicacion.component.css
@@ -83,6 +83,16 @@
   text-align: center;
 }
 
+.scroll {
+  display: block;
+  border: 0px solid red;
+  padding: 5px;
+  margin-top: 5px;
+  width: 100%;
+  height: 400px;
+  overflow-y: scroll;
+}
+
 /*-----------------------------------------------Estilos Modales------------------------------------------*/
 
 /*--------------------------------------------------Eliminar----------------------------------------------*/
