--- a/src/app/secciones/audiovideo/audiovideo.component.html
+++ b/src/app/secciones/audiovideo/audiovideo.component.html
@@ -156,13 +156,18 @@
         <br>
         <h3>Proyectos</h3>
         <br>
-        <div class="cuadricula">
-          <div class="item">1</div>
-          <div class="item">2</div>
-          <div class="item">3</div>
-          <div class="item">4</div>
-          <div class="item">5</div>
-          <div class="item">6</div>
+        <div class="scroll">
+          <div class="cuadricula">
+            <div class="item">1</div>
+            <div class="item">2</div>
+            <div class="item">3</div>
+            <div class="item">4</div>
+            <div class="item">5</div>
+            <div class="item">6</div>
+            <div class="item">7</div>
+            <div class="item">8</div>
+            <div class="item">9</div>
+          </div>
         </div>
       </div>
 
