--- a/src/app/secciones/programacion/programacion.component.html
+++ b/src/app/secciones/programacion/programacion.component.html
@@ -154,13 +154,18 @@
       <br>
       <h3>Proyectos</h3>
       <br>
-      <div class="cuadricula">
-        <div class="item"><p>1</p></div>
-        <div class="item"><p>2</p></div>
-        <div class="item"><p>3</p></div>
-        <div class="item"><p>4</p></div>
-        <div class="item"><p>5</p></div>
-        <div class="item"><p>6</p></div>
+      <div class="scroll">
+        <div class="cuadricula">
+          <div class="item">1</div>
+          <div class="item">2</div>
+          <div class="item">3</div>
+          <div class="item">4</div>
+          <div class="item">5</div>
+          <div class="item">6</div>
+          <div class="item">7</div>
+          <div class="item">8</div>
+          <div class="item">9</div>
+        </div>
       </div>
     </div>
 
